--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,5 @@
 DEBUG=
 SECRET_KEY=
-DATABASE_NAME=
-DATABASE_USER=
-DATABASE_PASSWORD=
-DATABASE_HOST=
-DATABASE_PORT=
+DATABASE_URL=
+STATIC_URL=
+MEDIA_URL=
