Renaming app mysite to photo_app. Add urls,templates,views in app.

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DEBUG="True"
 SECRET_KEY="django-insecure-n3o3n7#mmsdlggw!9oxokjsp&)c0$!3ho2@76^jov_vny9upn7"
 DATABASE_URL=postgres://comuser:password@localhost:5432/competition
+STATIC_URL="/static/"
+STATIC_ROOT="static"
+MEDIA_URL="/media/"
+MEDIA_ROOT="media"
