--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-imagekit = "*"
 social-auth-app-django = "*"
 djangorestframework = "*"
+django-service-objects = {git = "https://git.snpdev.ru/saltpepper/django-service-objects"}
 
 [dev-packages]
 
