--- a/Pipfile
+++ b/Pipfile
@@ -6,9 +6,9 @@ name = "pypi"
 [packages]
 django = "*"
 django-imagekit = "*"
-social-auth-app-django = "*"
 djangorestframework = "*"
 django-service-objects = {git = "https://git.snpdev.ru/saltpepper/django-service-objects"}
+django-allauth = "*"
 
 [dev-packages]
 
